# my-agent

./: CONTRIBUTING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  e2e.yml  unit.yml
backend/: .dockerignore  Dockerfile  README.md  mypy.ini  pyproject.toml  run.sh  run_app.py
backend/app/: main.py
backend/tests/: conftest.py  test_health.py  test_tasks.py  test_users.py
e2e/: README.md  docker-compose.yml  package.json  playwright.config.ts
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/tests/: App.test.tsx
frontend/tests/e2e/: homepage.spec.ts
src/: App.tsx
tests/unit/: App.test.tsx
